<?xml version="1.0" encoding="utf-8"?>

    <resources>
        <string name="app_name">ListingMovie</string>
        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="english">English</string>
        <string name="detail">Detail</string>
        <string name="nama_film">Nama Film</string>
        <string name="release">Release</string>
        <string name="rating">Rating</string>
        <string name="deskripsi_sinopsis">Deskripsi Sinopsis</string>
    <string name="home">Home</string>
    <string name="id">ID</string>
    <string name="login">Login</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="Login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="register">Register</string>
    <string name="masukkanusername">Masukkan Username</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_konfirmasi_password">Masukkan Konfirmasi Password</string>
    <string name="masukkanpassword">Masukkan Password</string>
    <string name="daftar">Daftar</string>
    <string name="masukkanUsername">Masukkan Username</string>
    <string name="profile">Profile</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="Overview">Overview</string>
    <string name="Rating">Rating</string>
    <string name="indonesia">Indo</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="namafilm">Nama Film</string>
    <string name="welcome_username">Welcome, username!</string>
    <string name="tipe_media">Tipe Media</string>
    <string name="date">Date</string>
    <string name="Release">Release</string>
    <string name="namaFilm">Nama Film</string>
    <string name="ulasan">Ulasan</string>
    <string name="MasukkanEmail">Masukkan Email</string>
    <string name="MasukkanPassword">MasukkanPassword</string>
    <string name="crash">Crash</string>
</resources>
